# wormhole-vaa-observer

./: README.md  flake.nix
documentation/: ADR-01-TECHNOLOGY.md  ADR-02-DOMAINS.md
infrastructure/: README.md  wormhole-redis.yaml  wormhole-spy.yaml
infrastructure/backend/: deployment.yaml  secret.yaml  service.yaml
microservices/backend/: .example.env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
microservices/backend/proto/spy/v1/: spy.proto
microservices/backend/src/: main.rs  state.rs
microservices/backend/src/domain/: mod.rs
microservices/backend/src/domain/health/: handler.rs  mod.rs
microservices/backend/src/domain/wormhole/: client.rs  handler.rs  mod.rs  models.rs
microservices/backend/src/domain/wormhole/grpc/: client.rs  handler.rs  handlers.rs  mod.rs  proto.rs  vaa.rs
microservices/backend/src/domain/wormhole/rest/: client.rs  handler.rs  handlers.rs  mod.rs  vaa.rs
microservices/backend/src/storage/: memory.rs  mod.rs
microservices/backend/src/utils/: docs.rs  mod.rs
