[package]
name = "wormhole-vaa-observer-backend"
authors = ["Federico Cipriani <yo@hesh.cc>"]
version = "0.1.0"
edition = "2021"

[dependencies]
aide = { version = "0.14", features = [
  "redoc",
  "swagger",
  "scalar",
  "axum-json",
  "macros",
] }
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8.1", features = ["macros"] }
dotenv = "0.15"
schemars = { version = "0.8.10", features = ["uuid1"] }
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.85"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["serde", "v4", "v5"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
hyper-tls = "0.6"
chrono = "0.4"
hex = "0.4"
